[package]
name = "rustacean-chronicles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
wasm-bindgen = "0.2.99"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
